force-app/main/default/objects/Data_Field_Record_Type_Picklist__c/Data_Field_Record_Type_Picklist__c.object-meta.xml
<CustomObject>
    <label>Data Field Record Type Picklist</label>
    <nameField>
        <label>Data Field Record Type Picklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Field Record Type Picklists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>