force-app/main/default/objects/Data_Field_Record_Type_Picklist__c/fields/Attributes__c.field-meta.xml
<CustomField>
    <fullName>Attributes__c</fullName>
    <label>Attributes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>