force-app/main/default/objects/Data_Field_Record_Type_Picklist__c/fields/Data_Field__c.field-meta.xml
<CustomField>
    <fullName>Data_Field__c</fullName>
    <label>Data Field</label>
    <referenceTo>Data_Field__c</referenceTo>
    <relationshipLabel>Data Field Record Type Picklists</relationshipLabel>
    <relationshipName>Data_Field_Record_Type_Picklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>