force-app/main/default/objects/Data_Field_Record_Type_Picklist__c/fields/Data_Object_Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Object_Record_Type__c</fullName>
    <label>Data Object Record Type</label>
    <referenceTo>Data_Object_Record_Type__c</referenceTo>
    <relationshipLabel>Data Field Record Type Picklists</relationshipLabel>
    <relationshipName>Data_Field_Record_Type_Picklists</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>