force-app/main/default/objects/Data_Field_Record_Type_Picklist__c/fields/Picklist_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Picklist_API_Name__c</fullName>
    <label>Picklist API Name</label>
    <type>TextArea</type>
</CustomField>