force-app/main/default/objects/Data_Field_Record_Type_Picklist__c/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>