force-app/main/default/objects/Data_Field_Record_Type_Picklist__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Picklist_API_Name__c</columns>
    <columns>Data_Object_Record_Type__c</columns>
    <columns>Attributes__c</columns>
    <columns>Data_Field__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>